Método e função estática para manipular as informações do usuário.

--- a/src/main/webapp/css/css-personalizado/personalizacao.css
+++ b/src/main/webapp/css/css-personalizado/personalizacao.css
@@ -85,3 +85,12 @@
 	background-color: #E0E0E0 ;
 }
 
+.input-hidden{
+  height:0;
+  width:0;
+  visibility: hidden;
+  padding:0;
+  margin:0;
+  float:right;
+}
+
