--- a/src/main/webapp/css/css-personalizado/personalizacao.css
+++ b/src/main/webapp/css/css-personalizado/personalizacao.css
@@ -1,24 +1,23 @@
-
-
 /*Estilo para o cadastro*/
 
-.borda-cor-cadastro{
-	padding: 10px; 
+.borda-cor-cadastro {
+	padding: 10px;
 	border: 1px #A0A0A0 solid;
-	background-color: white ;
-}
-.borda-red{
-	padding: 10px; 
-	margin-bottom: 10px;
-	border: 1px  solid #FF3333;
-	background-color: rgb(255, 198, 199) ;
+	background-color: white;
 }
 
-.largura-max-cadastro{
+.borda-red {
+	padding: 10px;
+	margin-bottom: 10px;
+	border: 1px solid #FF3333;
+	background-color: rgb(255, 198, 199);
+}
+
+.largura-max-cadastro {
 	padding: 10px;
 	margin: auto auto;
 	max-width: 900px;
-	
+
 	/*border: 1px black solid;*/
 	background-color: #E0E0E0;
 }
@@ -26,12 +25,13 @@
 
 /*Estilo para as paginas em geral*/
 
-.menu-principal{
+.menu-principal {
 
 	float: left;
 	margin: 10px 5px;
 }
-.menu-principal1{
+
+.menu-principal1 {
 
 	float: right;
 	margin: 10px 5px;
@@ -39,17 +39,18 @@
 
 
 
-.fundo{
+.fundo {
 	background-color: rgb(255, 128, 128);
 }
 
 
-.rodape{
+.rodape {
 	min-height: 50px;
 	max-height: 50px;
 	background-color: #E0E0E0;
 }
-.center-div-text{
+
+.center-div-text {
 
 	position: relative;
 	color: black;
@@ -60,59 +61,69 @@
 
 }
 
-.center-div{
-  margin: 0;
-  padding: 10px;
-    
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+.center-div {
+	margin: 0;
+	padding: 10px;
 
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%)
 }
 
-.alinhamento-tamanho_max{
+
+
+.alinhamento-tamanho_max {
 	min-width: 600px;
 	max-width: 1200px;
-	
-	
-	
-	
+
+
+
+
 	margin: auto auto;
-	
+
 }
 
-.color-menu{
+.color-menu {
 	color: #606060
-
 }
 
-.fundo-pagina{
+.fundo-pagina {
 	background-color: #E0E0E0;
 }
-.fundo-menu{
+
+.fundo-menu {
 	
 	background-color: #E0E0E0;
 	height: 70px;
-	
-	
-	
+
+
+
 }
 
-.margem-carrocel{
+.margem-carrocel {
 	margin-top: 10px;
 }
 
-.borda{
+.borda {
 	border: 1px #DCDCDC solid;
 }
 
-.acesso-usuario{
-  margin: 10px;
-  float: right;
-  background-color: #DCDCDC;
-  border: 1px solid white; 
-  border-radius: 5px;
- 
+.acesso-usuario {
+	margin: 10px;
+	float: right;
+	background-color: #DCDCDC;
+	border: 1px solid white;
+	border-radius: 5px;
+
 }
+
+.menu-admin{
+	border: 1px solid red; 
+	max-width: 1200px; 
+	height:65px; 
+	margin: auto auto;
+}
+
+
